--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Super Tech-Blog Management",
-    "description": "テックブログ管理サイト(http://techblog.shiroatohiro.com/)と併用することでテックブログを簡単に管理することができる。この拡張機能によって現在の記事に対して、いいね(ブックマーク、アーカイブ)をつけることができる。",
+    "description": "テックブログ管理サイト(https://techblog.shiroatohiro.com/)と併用することでテックブログを簡単に管理することができる。この拡張機能によって現在の記事に対して、いいね(ブックマーク、アーカイブ)をつけることができる。",
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
@@ -11,6 +11,7 @@
     ],
     "host_permissions": [
         "http://techblog.shiroatohiro.com/*",
+        "https://techblog.shiroatohiro.com/*",
         "http://*/*",
         "https://*/*"
     ],
@@ -37,7 +38,7 @@
     },
     "content_scripts": [
       {
-        "matches": ["http://techblog.shiroatohiro.com/*"],
+        "matches": ["http://techblog.shiroatohiro.com/*", "https://techblog.shiroatohiro.com/*"],
         "js": ["content.js"]
       }
     ]
